Changement stockage compte bannis

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -509,7 +509,7 @@ Si le client a été auparavant banni par le serveur.
 			\item Le programme doit stocker le temps restant au compte.
 			\item A la fin du temps le programme devra supprimer le compte lors de la prochaine tentative de connexion.
 			\item Lors de la suppression le programme doit signaler a l'utilisateur que sont compte temporaire a été supprimé.
-			\item Le stockage sera sous la forme : TempsEnSeconde$ \vert $pseudo@motDePasse:/fichier\#/autrefichier
+			\item Le stockage sera sous la forme : DateFinEnSeconde$ \vert $pseudo@motDePasse:/fichier\#/autrefichier
 		\end{enumerate}
 	\subparagraph{Comptes bannis}
 		\begin{enumerate}
